# rust_mod

./: Cargo.toml  pyproject.toml  test.py
src/: lib.rs  main.rs  tempCodeRunnerFile.rs  test.rs  test.txt
src/mods/: mod.rs  read_gbk.rs  regsearch.rs
src/vct/: featurecode.rs  geometry.rs  mod.rs  parsevct.rs
