[package]
name = "rust_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_mod"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
rand = "0.8.5"
encoding = "0.2.33"
regex = "1.10.3"
[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false